syntax = "proto3";
package proto;

service Parser {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc AddMsg(AddMsgRequest) returns (AddMsgResponse) {}
}

message PingRequest {
  string Msg = 1;
}

message PingResponse {
  string Msg = 1;
}

message AddMsgRequest {
  string MsgKey = 1;
}


message AddMsgResponse {
  bool Processed = 1;
}
